# PortalInvoiCyArgentina

./: .gitignore  404.html  FAQ.html  README.md  index.html  mkdocs.yml  preguntasmasfrecuentes.html  pyproject.toml  requirements.txt  sitemap.xml
Extensiones/InvoiCy_OCR_Internacional/: index.html
FAQ/: index.html
Integración/: Autenticación API Rest.html  Integracion_API_REST.html  downloads.html
Integración/AutenticacionAPIRest/: index.html
Integración/Autenticacion_API_Rest/: index.html
Integración/Autenticación API Rest/: index.html
Integración/Integracion_API_REST/: index.html
Integración/downloads/: index.html
Release Notes del Invoicy/ReleaseNotes/: index.html
Release Notes del Invoicy/Versión 1.00.0/: index.html
Release Notes del Invoicy/Versión 1.01.0/: index.html
Release Notes del Invoicy/Versión 1.01.1/: index.html
Revisiones/: Release Notes.html  timeline_versions.json
Revisiones/Release Notes/: index.html
assets/javascripts/: search-dedicated.js
assets/stylesheets/: breakpoints.css  components.css  extra.css
docs/: FAQ.md  index.md
docs/Extensiones/: InvoiCy_OCR_Internacional.md
docs/Integración/: Autenticacion_API_Rest.md  Autenticación API Rest.md  Integracion_API_REST.md  downloads.md
docs/Release Notes del Invoicy/: ReleaseNotes.md  (+3 more)
facturas/: API-Emision_ARG-Factura_A_y_B.xlsx  API-Emision_ARG-Factura_E.xlsx  FacturaA.json  FacturaE.json  FacturaT.json
overrides/: main.html
preguntasmasfrecuentes/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
stylesheets/: extra.css
(+20 files in other folders)
