[tool.poetry]
name = "portalinvoicyargentina"
version = "0.1.0"
description = ""
authors = ["Leonardo Peres <leonardoperes@migrate.info>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
