[tool.poetry]
name = "portalinvoicyargentina"
version = "0.1.0"
description = ""
authors = ["Leonardo Peres <leonardoperes@migrate.info>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = {extras = ["i18n"], version = "^1.5.3"}
mkdocs-material = "^9.4.6"
pymdown-extensions = "^10.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
